Fix: footer alignment

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ body {
   border-bottom: .5em solid #222;
 }
 
-.section__text, .footer__text {
+.section__text {
   text-align: center;
 }
 
@@ -155,12 +155,13 @@ body {
 
 .footer__text p {
   margin: 0;
+  padding-left: 1em;
 }
 
 .footer-container {
   padding: 0;
   margin: 0;
-  margin-top: 1.5em;
+  margin-top: 1em;
 }
 
 .footer-link-item {
